[package]
name = "tokio_chacha20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
base64 = "0.21"
blake3 = "1"
num-bigint = "0.4"
rand = "0.8"
rayon = { version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
